# fastapi_auth_tortoise_models

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
fastapi_auth_tortoise_models/: __init__.py  models.py  repositories.py
