[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi_auth_tortoise_models"
dynamic = ['version']
authors = [
    { name = "zayycev22" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiosqlite",
    "typing-extensions",
    "tortoise-orm",
]
description = "Tortoise repositories and models for fastapi-auth library"
requires-python = ">=3.10"