[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "fastapi_auth_tortoise_models/__init__.py"

[project]
name = "fastapi_auth_tortoise_models"
dynamic = ['version']
authors = [
    { name = "zayycev22" },
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiosqlite",
    "typing-extensions",
    "tortoise-orm",
    "auth_fastapi >= 0.2.0"
]
description = "Tortoise repositories and models for fastapi-auth library"
requires-python = ">=3.9"